simplenodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simplenodejs-service
spec:
  selector:
    app: simplenodejs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: simplenodejs-lb
spec:
  selector:
    app: simplenodejs
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30000
