simplenodejs-service.yml
apiVersion: v1
kind: Service
metadata:
  name: simplenodejs-service
spec:
  selector:
    app: simplenodejs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
