simplenodejs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplenodejs-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: simplenodejs-ingress-example
  rules:
    - host: "nodejs.soebes.team"
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simplenodejs-lb
                port:
                  number: 8080
